# ycfp

./: .gitignore  CMakeLists.txt  library.h
include/: ycfp.h
src/: expectation.cpp  expectation.h  expected.cpp  expected.h  ycfp.cpp
test/integration/: CMakeLists.txt  nested_object_test.cpp
test/unit/: CMakeLists.txt  expectation_test.cpp  factorial_test.cpp  for_each_test.cpp
